# image-1x1-app

./: README.md
client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  index.css
client/src/components/: DropzoneUploader.tsx  PreviewImage.tsx  UploadForm.tsx
client/src/pages/: HomePage.tsx
server/: .gitignore  pyproject.toml  render.yaml  requirements.txt
server/src/: app.py
server/src/routes/: uploads.py
server/src/services/: cropper.py  leaf_detect.py  zipper.py
